styles/styles.css
* {
  border: 1px solid red;
}

.page {
  width: 1100px;
  box-sizing: border-box;
  display: block;
  margin: 0 auto;
  font-family: Raleway, sans-serif;
}

.header {
  display: grid;
  grid-template-columns: 1fr min-content 1fr;
  align-items: center;
  column-gap: 13px;
  margin: 0;
  padding: 90px 50px;
  font-weight: normal;
  font-size: 18px;
  color: #000000;
}

.header__menu {
  display: flex;
  flex-direction: column;
}

.header__links-list {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  text-underline-offset: 3px;
  text-transform: lowercase;
}

.header__links-list-item {
  list-style: circle;
}

.header__links-list-item_no-bullit {
  list-style: none;
}

.header__link_active {
 text-decoration: none;
}

.header__logo {
  display: inline-block;
  min-height: 105px;
  min-width: 130px;
}

.header__logo-image {
  display: block;
  width: auto;
  height: auto;
  max-width: 100%;
}
.adress {
  display: flex;
  flex-direction: column;
}

.header__adress {  
  justify-self: end;
}

.adress__list {
  list-style: none;
  text-underline-offset: 3px;
}

.adress__list-item {
  overflow-wrap: break-word;
}

.cover {
  display: flex;
  flex-direction: column;
  background-image: url(/images/cover.jpg);
  background-repeat: no-repeat;
  background-position: top;
  background-size: cover;
  margin: 0;
  padding: 0;
  width: auto;
  min-height: 757px;
  box-sizing: border-box;
  position: relative;
  z-index: 0;
}

.overlay {
  background-color: #000000;
  opacity: .6;
  position: absolute;
  z-index: 1;
  height: 100%;
  width: 100%;
}

.cover__title {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding: 165px 50px 50px;
  color: #FFFFFF;
  z-index: 2;
}

.aligned-text {
  font-size: 100px;
  font-weight: bold;
  letter-spacing: 0.3em;
  text-transform: uppercase;
}

.aligned-text_left {
  text-align: start;
}

.aligned-text_center {
  text-align: center;
}

.aligned-text_right {
  text-align: end;
}

.letter-spacing-extended {

}

.no-letter-spacing {
  letter-spacing: normal;
}

.cover__description {
  display: inline-flex;
  justify-content: space-between;
  align-items: baseline;
  margin: 100px 0 0;
  padding: 0 50px;
  color: #FFFFFF;
  font-family: Raleway, sans-serif;
  font-weight: normal;
  font-size: 22px;
  line-height: 28px;
  word-spacing: 0.9ch;
  text-transform: uppercase;
  z-index: 2;
}

.bet-button {
  background-color: transparent;
  border: 1px solid #FFFFFF;
  color: #FFFFFF;
  font-size: 22px;
  text-align: center;
  line-height: 28px;
  font-weight: normal;
  word-spacing: 0.9ch;
  text-transform: uppercase;
  padding: 10px 30px;
}

.lots {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  min-height: 723px;
  margin: 180px 24px 0;
  padding: 0;
  overflow-wrap: anywhere;
  position: relative;
  z-index: -2;
}

.lots__heading {
  margin: 0 auto 0 40px;
  color: #000000;
  font-size: 40px;
  font-weight: bold;
  text-transform: uppercase;
}

.lots__card-list {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 25px;
  padding: 30px 0;
  box-sizing: border-box;
}

.lots__card-list-item {
  display: flex;
  /*width: 100%;
  min-height: 596px;*/
  list-style: none;
  padding: 48px 40px;
  position: relative;
}

.card-link {
  height: 100%;
  padding: 0;
  text-decoration: underline;

  text-underline-offset: 3px;
}

.card {
  display: flex;
  flex-direction: column;
  gap: 30px;
  height: 100%;
}

.card_type_film {
  background-image: url(/images/card-lot-01.jpg);
  background-size: cover;
  background-position: center;
  position: relative; /* дает смещение блока вниз*/
  min-height: 596px;
  z-index: 0;
}

.card_type_book {
  background-image: url(/images/card-lot-02.jpg);
  background-size: cover;
  background-position: center;
  position: relative;
  z-index: 0;
}

.card_type_picture {
  background-image: url(/images/card-lot-03.jpg);
  background-size: cover;
  position: relative;
  z-index: 0;
}

.card__title {
  color: #FFFFFF;
  font-size: 22px;
  font-weight: bold;
  text-transform: uppercase;
  text-decoration: solid;
  z-index: 2;
}

.card__text {
  color: #FFFFFF;
  font-size: 20px;
  z-index: 2;
}

.lots__look-more-link {
  margin: 0 auto 0 40px;
  font-size: 20px;
  color: #000000;
  font-weight: normal;
  text-transform: lowercase;
  text-decoration: solid;
  text-underline-offset: 3px;
}

.about {
  display: grid;
  grid-template-columns: 1fr 2fr ;
  column-gap: 25px;
  margin: 120px 24px 180px;
  padding: 35px 0 0;
  min-height: 596px;
}

.about__column {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
}

.about__logo {
  background-color: #000000;
  border-radius: 50%;
  min-height: 240px;
  min-width: 240px;
  position: relative;
  z-index: 1;
}

.about__logo-image {
  inset: 64px 46px auto auto;
  width: 63%;
  position: absolute;
  z-index: 2;

}

.about__column_descriptive-part {
  display: flex;
  flex-direction: column;
  justify-content: end;
  align-items: start;
}

.about__title {
  color: #000000;
  font-size: 40px;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 100px;
}

.about__text {
  display: flex;
  flex-direction: column;
  justify-content: end;
  gap: 24px;
  color: #000000;
  font-size: 20px;
  font-weight: normal;
}

.footer {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  background-color: thistle;
  margin: 0;
  padding: 0 50px 80px;
}

.footer__menu {

}

.footer__menu-list {
  list-style: none;
}

.footer__menu-list-item {

}

.footer__menu-link {

}

.footer__menu-link_active {

}

.footer__social-list {
  list-style: none;
}

.footer__social-list-item {

}

.footer__social-link {

}

.footer__social-icon {

}

